<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.pincette</groupId>
  <artifactId>pincette-jes-cli</artifactId>
  <version>3.1.1</version>
  <name>pincette-jes-cli</name>
  <description>Command line tool for JSON Event Sourcing</description>
  <url>https://github.com/wdonne/pincette-jes-cli</url>

  <organization>
    <name>Pincette</name>
    <url>https://pincette.net</url>
  </organization>

  <scm>
    <url>https://github.com/wdonne/pincette-jes-cli</url>
    <connection>scm:git@github.com:wdonne/pincette-jes-cli.git</connection>
    <developerConnection>scm:git@github.com:wdonne/pincette-jes-cli.git</developerConnection>
  </scm>

  <developers>
    <developer>
      <id>wdonne</id>
      <name>Werner Donné</name>
      <email>werner.donne@pincette.net</email>
      <url>https://pincette.net</url>
      <organization>Pincette</organization>
      <organizationUrl>https://pincette.net</organizationUrl>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>BSD-style</name>
      <url>http://www.opensource.org/licenses/bsd-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-common</artifactId>
      <version>2.5.0</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-json</artifactId>
      <version>2.1.3</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-jes</artifactId>
      <version>3.2.4</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-jes-util</artifactId>
      <version>3.2.2</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-rs</artifactId>
      <version>3.7.0</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-kafka-json</artifactId>
      <version>1.0.10</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-mongo</artifactId>
      <version>4.1.10</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>javax.json</artifactId>
      <version>1.1.4</version>
    </dependency>
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>4.7.6</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.13</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>net.pincette.jes.cli.Application</mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>info.picocli</groupId>
              <artifactId>picocli-codegen</artifactId>
              <version>4.7.6</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
